--- a/front/src/pages/ChatPage/ChatPage.css
+++ b/front/src/pages/ChatPage/ChatPage.css
@@ -78,9 +78,9 @@
     padding: 0.8rem;
     font-size: 0.9rem;
     line-height: 1.4;
-    background: #151515;
+    background: #e4ddd6;
     border-radius: 10px;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+    box-shadow: 0 1px 2px rgb(255, 255, 255);
     position: relative;
 }
 
